--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,61 @@
+html {
+  height: 100%;
+}
+
+body {
+  height: inherit;
+}
+
+#root {
+  height: inherit;
+}
+
+
 .App {
+  display: flex;
+  flex-direction: column;
+  height: inherit;
+}
+
+#home-page {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  flex: 1 1 auto;
+  background: linear-gradient(0.25turn, #3E5C76, #0D1321, #3E5C76);
+}
+
+#home-header {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  text-align: center;
+  height: 20%;
+  margin: 30px;
+  background-color: #1D2D44;
+  border: 5px solid #1D2D44;
+  color: #F0EBD8;
+}
+
+#home-body {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  height: 80%;
+  text-align: center;
+  color: #F0EBD8;
+}
+
+#shopping-list {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+#shopping-cart {
   display: flex;
   flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+  text-align: center;
 }
