--- a/src/App.css
+++ b/src/App.css
@@ -48,6 +48,20 @@ img {
   color: #F0EBD8;
 }
 
+#home-title {
+  display: flex;
+  justify-content: center;
+  font-size: x-large;
+}
+
+#header-quotes {
+  display: flex;
+  justify-content: space-between;
+  margin: 0 50px;
+  font-family: cursive;
+  opacity: .3;
+}
+
 #home-body {
   display: flex;
   flex-direction: column;
@@ -59,7 +73,11 @@ img {
 #home-event-items {
   display: flex;
   justify-content: space-evenly;
-  flex: 0 1 auto;
+  margin: 50px 0;
+}
+
+#home-sale-event {
+  opacity: .6;
 }
 
 #home-event-items :hover {
@@ -71,27 +89,47 @@ img {
 #home-bundle-items {
   display: flex;
   justify-content: center;
-  margin: 50px;
-  width: 60%;
 }
 
 #home-bundle-items :hover {
   display: flex;
+  justify-content: center;
   position: relative;
-  flex: 1 1 auto;
   box-shadow: 5px 5px 14px #F0EBD8, -5px -5px 14px #F0EBD8;
 }
 
-#shopping-list {
+#shop-page {
+  display: flex;
+  flex-direction: column;
+}
+
+#shopping-cart {
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  flex: 1 1 auto;
+  background-color: #3E5C76;
+}
+
+#cart {
   display: flex;
   flex-direction: column;
   justify-content: center;
   text-align: center;
 }
 
-#shopping-cart {
+#shop-items {
   display: flex;
   flex-direction: column;
   justify-content: center;
   text-align: center;
+}
+
+#game {
+  color: #3E5C76;
+}
+
+#start {
+  color: #748CAB;
 }
