--- a/src/App.css
+++ b/src/App.css
@@ -100,16 +100,19 @@ nav {
 
 #quotes-container {
   position: absolute;
+  text-align: center;
   bottom: 0px;
   width: 100%;
-  height: 10%;
+  height: 5%;
+  background-color: rgba(0, 0, 0, .3);
 }
 
 #quotes {
   display: flex;
   justify-content: space-between;
+  height: 100%;
   margin: 0 50px;
-  align-content: flex-end;
+  align-items: center;
   font-family: cursive;
   opacity: .3;
 }
@@ -178,12 +181,17 @@ nav {
   display: flex;
   justify-content: center;
   margin: 5px 0;
+  box-shadow: 2px 2px 7px #0D1321, -2px -2px 7px #0D1321;
+  background-color: rgba(0, 0, 0, .3);
+  width: 80%;
+  align-self: center;
 }
 
 .cart-item {
   display: flex;
   justify-content: space-between;
   align-items: center;
+  margin: 1px;
 }
 
 .cart-item:hover {
@@ -194,11 +202,12 @@ nav {
 #cart-item-list {
   display: flex;
   flex-direction: column;
-  width: 60%;
-  height: 150px;
-  padding: 14px;
+  width: 80%;
+  height: 161px;
+  padding: 5px;
+  margin: 4px;
+  border-radius: 5px;
   overflow: auto;
-
   color: #F0EBD8;
 }
 
@@ -215,6 +224,7 @@ nav {
 #cart-item-price-container {
   display: flex;
 }
+
 .cart-item-price {
   color: #F0EBD8;
 }
@@ -227,7 +237,6 @@ nav {
   display: flex;
   flex-direction: column;
   justify-content: space-around;
-  width: 20%;
 }
 
 
